Ok. Finally the pdf was created. Still need to change the plots for ggplot. These don.t look nice. Maybe nice circle plot?

--- a/repdata_assessemnt_2.Rmd
+++ b/repdata_assessemnt_2.Rmd
@@ -2,9 +2,10 @@
 title: 'Reproducible Research: Peer Assessment 2'
 author: "Tomasz Samsel"
 date: "05/24/2015"
-output: 
-  html_document: 
-    keep_md: yes
+output:
+  pdf_document: default
+  html_document:
+    theme: journal
 ---
 
 
